Refactor: Mapper 관련 수정
- 불필요한 @Mapping 제거
- ChannelMapper participants, lastMessageAt 관련 문제 수정